test/elaboration/bad/typeclass_instance_bad_class_name.mle
class H 'a { x : 'a }
instance J int { x = 42 }